api conversor de monedas

--- a/ferremas_backend/.env
+++ b/ferremas_backend/.env
@@ -1,3 +1,16 @@
+
+# Mercado Pago
+
 MP_ACCESS_TOKEN=APP_USR-2928925457635139-052710-bd05bb6a31150508cbdaf5e28b75d49c-2459689401
 
 MP_PUBLIC_KEY=APP_USR-200114a2-0ab8-413a-a99f-794a01bf1fb3
+
+
+
+
+
+# Conversor de Monedas
+CURRENCY_API_KEY=df6765f48316e4dc7e622b20
+EXCHANGE_RATE_KEY=https://v6.exchangerate-api.com/v6/df6765f48316e4dc7e622b20/latest/USD
+
+
