--- a/ferremas_backend/.env
+++ b/ferremas_backend/.env
@@ -13,4 +13,10 @@ MP_PUBLIC_KEY=APP_USR-200114a2-0ab8-413a-a99f-794a01bf1fb3
 CURRENCY_API_KEY=df6765f48316e4dc7e622b20
 EXCHANGE_RATE_KEY=https://v6.exchangerate-api.com/v6/df6765f48316e4dc7e622b20/latest/USD
 
-
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=fneilaf.graphic@gmail.com
+EMAIL_HOST_PASSWORD=iwjwjnjwgusstgvl
+EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
