--- a/ferremas_frontend/package.json
+++ b/ferremas_frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "uuid": "^11.1.0"
